2001-01-16	Eric Valette <valette@crt.canon.fr>

	* irq/irq.c: Correct minor bug in mbx8xx interrupt handling.
	Quoting Eric, "In theory it should be applied in each mpc8xx
	related BSP but as I cannot test it plase maintainer/users 
	submit patch accordingly."

2002-01-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* console/console.c: Include rtems/bspIo.h instead of bspIo.h.

2001-12-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_ENABLE_NETWORKING.

2001-11-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Introduce RTEMS_BSP_CONFIGURE.

2001-11-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_BSPOPTS_*(DATA_CACHE_ENABLE),
	RTEMS_BSPOPTS_*(INSTRUCTION_CACHE_ENABLE).

2001-11-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Add @exceptions@ to SUBDIRS.
	* configure.ac: Add RTEMS_BSPOPTS_*(), merge-in settings
	from make/custom/mbx*.cfg, add RTEMS_PPC_EXCEPTIONS([new]).
	* include/Makefile.am: Convert PREINSTALL_FILES to
	TMPINSTALL_FILES, include force-preinstall.am.
	* vectors/Makefile.am: remove bogus VPATH.
	* wrapup/Makefile.am: Apply @exceptions@.

2001-10-29	Joel Sherrill <joel@OARcorp.com>

	* include/bsp.h: Modify Install_tm27_vector() so this BSP will link tm27.

2001-10-12	Joel Sherrill <joel@OARcorp.com>

	* clock/p_clock.c, include/bsp.h, include/coverhd.h,
	startup/bspstart.c, startup/bspstart.c.nocache, startup/setvec.c,
	startup/start.S: Fixed typo.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.
	* configure.ac: New file, generated from configure.in by autoupdate.

2001-09-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* include/Makefile.am: Use 'PREINSTALL_FILES ='.
	* irq/Makefile.am: Use 'PREINSTALL_FILES ='.
	* vectors/Makefile.am: Use 'PREINSTALL_FILES ='.

2001-08-31  Eric Valette <valette@crf.canon.fr>

	* network/network.c: Fix to account for return value when