@@ -1,5 +1,14 @@
 2001-01-16	Eric Valette <valette@crt.canon.fr>
 
+	* vector/vector.S, irq/irq_asm.S: Make sure vectors work properly
+	in RAM and Flash based code.  The code executed for the Flash
+	version runs in both cases (code in Flash/code in RAM) but as it
+	is less efficient than the one optimized for RAM, it put it inside
+	ifdef.  A compilation error is generated if code is linked in Flash
+	with the correct ifdef set...
+
+2001-01-16	Eric Valette <valette@crt.canon.fr>
+
 	* irq/irq.c: Correct minor bug in mbx8xx interrupt handling.
 	Quoting Eric, "In theory it should be applied in each mpc8xx
 	related BSP but as I cannot test it plase maintainer/users 
